Prevent overlapping popover flashing

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -25,6 +25,8 @@ html, body {
 /* The container of bootsrap popover is main, so define the style here */
 .popover {
 	max-width: 400px;
+	/* Prevent overlay popover flashing */
+	pointer-events: none;
 }
 
 .card {
